--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ proyecto/proyectoAndroidStudio/.gradle/
 proyecto/proyectoAndroidStudio/local.properties
 proyecto/proyectoAndroidStudio/build
 proyecto/proyectoAndroidStudio/.idea
+proyecto/proyectoAndroidStudio/.idea/workspace.xml
