--- a/proyecto/proyectoAndroidStudio/local.properties
+++ b/proyecto/proyectoAndroidStudio/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Mar 22 19:06:32 CET 2025
-sdk.dir=/home/nyae/Android/Sdk
+#Sun Apr 06 00:09:38 CEST 2025
+sdk.dir=C\:\\Users\\marti\\AppData\\Local\\Android\\Sdk
