--- a/proyecto/proyectoAndroidStudio/local.properties
+++ b/proyecto/proyectoAndroidStudio/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Mar 03 11:43:20 CET 2025
-sdk.dir=C\:\\Users\\Cristian\\AppData\\Local\\Android\\Sdk
+#Sun Apr 06 16:51:05 CEST 2025
+sdk.dir=/home/nyae/Android/Sdk
